# bazel-monorepo-example

./: .gitignore  BUILD.bazel  CHANGELOG.md  README.md  WORKSPACE  angular.json  bazel-out  lerna.json  package.json  publish-libs.sh  tsconfig.json  tsconfig.npm.json
apps/app1/: BUILD.bazel  CHANGELOG.md  index.ts  package.json
apps/app2/: CHANGELOG.md  package.json
apps/app2/src/: index.html
apps/app2/src/app/: app.component.ts
apps/app3/: CHANGELOG.md  package.json
apps/app3/src/: BUILD.bazel  index.html  main.ts
apps/app3/src/app/: BUILD.bazel  app.component.html  app.component.ts
libs/lib1/: BUILD.bazel  CHANGELOG.md  index.ts  package.json
libs/lib2/: BUILD.bazel  CHANGELOG.md  index.ts
scripts/: debug.sh
tools/: bazel.rc  nodejs_docker_image.bzl  print-workspace-status.sh
tools/work-arounds/: jsrsasign.sh  postinstall.sh
