# Marker file indicating this folder is a Bazel package.
# Needed so that tsconfig.json can be referenced from BUILD rules.
package(default_visibility = ["//visibility:public"])

exports_files(["tsconfig.json"])

load("@build_bazel_rules_nodejs//:defs.bzl", "node_modules_filegroup")

alias(
    name = "install",
    actual = "@yarn//:yarn",
)

node_modules_filegroup(
    name = "node_modules",
    packages = [
        "express",
        "hapi",
        "jasmine",
        "rxjs",
        "tsickle",
        "tslib",
        "tsutils",
        "typescript",
        "zone.js",
        "@angular",
        "@types",
        "angular-oauth2-oidc",
        "jsrsasign"
    ],
)

ANGULAR_TESTING = [
    "node_modules/@angular/*/bundles/*-testing.umd.js",
    # We use AOT, so the compiler and the dynamic platform-browser should be
    # visible only in tests
    "node_modules/@angular/compiler/bundles/*.umd.js",
    "node_modules/@angular/platform-browser-dynamic/bundles/*.umd.js",
]

filegroup(
    name = "angular_bundles",
    srcs = glob(
        [
            "node_modules/@angular/*/bundles/*.umd.js",
        ],
        exclude = ANGULAR_TESTING,
    ),
)