load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ts_library(
    name = "lib1",
    srcs = glob([
        "*.ts",
    ]),
    deps = [
        "//libs/lib1",
        "//libs/lib2",
    ]
)

nodejs_binary(
    name = "app1-run",
    data = [":lib1"],
    entry_point = "../index.js"
) 