load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")

package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ts_library(
    name = "app1",
    srcs = glob([
        "*.ts",
    ]),
    deps = [
        "//libs/lib1",
        "//libs/lib2",
    ]
)

nodejs_binary(
    name = "run",
    data = [":app1"],
    entry_point = "../index.js"
) 

nodejs_image(
    name = "nodejs_image",
    entry_point = "monorepo_example/apps/app1/index.js",
    # This will be put into its own layer.
    node_modules = "//:express_runtime_deps",
    data = [":run"],
)

# container_push(
#    name = "push_foo",
#    image = ":foo",
#    format = "Docker",
#    registry = "gcr.io",
#    repository = "my-project/my-image",
#    tag = "dev",
# )