load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")
load("//tools:nodejs_docker_image.bzl", "docker_nodejs_image", "docker_push_group")

package(default_visibility = ["//visibility:public"])


ts_library(
    name = "lib",
    srcs = glob([
        "*.ts",
    ]),
    deps = [
        "//libs/lib1",
        "//libs/lib2",
    ]
)

nodejs_binary(
    name = "app1",
    data = [":lib"],
    entry_point = "monorepo_example/apps/app1/index.js"
) 

docker_nodejs_image(
    name = "image",
    entry_point = "monorepo_example/apps/app1/index.js",
    node_modules = "//:express_runtime_deps",
    data = [":lib"],
    ports = ["80"],
)

# produces 
#   bazel build apps/app1:push_image.0
#   bazel build apps/app1:push_image.1
docker_push_group(
    name = "push_image",
    image = ":image",
    registry = "gcr.io",
    repository = "my-project/my-image",
    tags = ["dev", "{BUILD_SCM_VERSION}"],
)