load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "npm_package")

load("@angular//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "lib1",
    srcs = glob([
        "*.ts",
    ]),
    # we have to use ng_module to access this module from other targets with this module name
    module_name = "@repo/lib1",
)

npm_package(
    name = "npm_package",
    srcs = [":package.json"],
    deps = [
        ":lib1"
    ],
)
