package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test")



ng_module(
    name = "app",
    srcs = [
        "app.component.ts",
        "app.module.ts",
    ],
    assets = ["app.component.css", "app.component.html"],
    tsconfig = "//:tsconfig.json",
    deps = [
        "//libs/lib1",
        "@rxjs",
    ],
)